Correct sidebar scrollbar slider color

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -1540,7 +1540,7 @@ placessidebar.sidebar row:selected, placessidebar.sidebar row:selected:hover, pl
     background-color: transparent; }
     
 placessidebar.sidebar scrollbar slider, placessidebar.sidebar scrollbar slider:hover, placessidebar.sidebar scrollbar slider:active, placessidebar.sidebar scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider {
-    background-color: @sidebar_fg_color; }
+    background-color: alpha(@sidebar_fg_color, 0.3); }
 
 paned .sidebar.left, paned .sidebar.right, paned .sidebar.left:dir(rtl), paned .sidebar:dir(rtl), paned .sidebar:dir(ltr), paned .sidebar {
     border: none; }
